# -*- Makefile -*-
#
#

AM_CPPFLAGS = $(BOOST_CPPFLAGS)

introdir = $(pkglibdir)
intro_LTLIBRARIES = libintrospector_cpuTemperature.la
libintrospector_cpuTemperature_la_SOURCES = introspector_cpuTemperature.h introspector_cpuTemperature.cc
libintrospector_cpuTemperature_la_LDFLAGS = -module -avoid-version
